Add worker input search

--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
                     </ul>                    
                     <ul class="user-navigation">
                         <li class="search">
-                            <form>
-                                <input type="search" name="search" placeholder="Поиск по сайту">
+                            <form method="get" action="https://echo.htmlacademy.ru">
+                                <input type="search" name="search" placeholder="Поиск по сайту" autocomplete="off">
+                                <button class="button-search">
+                                    Найти
+                                </button>
                             </form>    
                         </li>
                         <li class="login-link">
