--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
                                 </button>
                             </form>    
                         </li>
-                        <li class="login-link">
+                        <li class="login-link login-link-header">
                             <a href="#">
                                 Войти
                             </a>
                         </li>
                     </ul>
                     <ul class="buy">
-                        <li class="compare">
+                        <li class="compare compare-header">
                             <a href="#">
                                 Сравнить
                             </a>
                         </li>
-                        <li class="basket">
+                        <li class="basket basket-header">
                             <a href="#">
                                 Корзина
                             </a>
@@ -482,14 +482,19 @@
                         </p>
                     </div>                    
 
-                    <section class="modal modal-map">
+                    <section class="map">
                         <h2 class="visually-hidden">
                             Как до нас добраться.
                         </h2>
-                        <img src="img/map.png" width="560" height="222" alt="Адрес магазина «Device» ул. Строителей, 15">
-                        <button class="modal-close">
-                            x
-                        </button>
+                        <div class="modal modal-map">
+                            <img src="img/map.png" width="560" height="222" alt="Адрес магазина «Device» ул. Строителей, 15">
+                            <button class="modal-close">
+                             Закрыть
+                            </button>
+                        </div>
+                        <a class="map-button" href="#">
+                            <img src="img/map.png" width="560" height="222" alt="Адрес магазина «Device» ул. Строителей, 15">
+                        </a>    
                     </section>
 
                     <a class="button" href="#">
@@ -524,7 +529,7 @@
                             </button>
                         </form>
                         <button class="modal-close">
-                            х
+                            Закрыть
                         </button>
                     </section>
                 </section>
@@ -592,20 +597,20 @@
                                 </ul>
                             </div>    
                             <div class="user-link">
-                                <ul class="user-navigation">
-                                    <li class="login-link">
+                                <ul class="user-navigation user-navigation-footer">
+                                    <li class="login-link login-link-footer">
                                         <a href="#">
                                             Войти
                                         </a>
                                     </li>
                                 </ul>
-                                <ul class="buy">    
-                                    <li class="compare">
+                                <ul class="buy buy-footer">    
+                                    <li class="compare compare-footer">
                                         <a href="#">
                                             Сравнить
                                         </a>
                                     </li>
-                                    <li class="basket">
+                                    <li class="basket basket-footer">
                                         <a href="#">
                                             Корзина
                                         </a>
