--- a/catalog.html
+++ b/catalog.html
@@ -77,23 +77,26 @@
                     </ul>
                     <ul class="user-navigation">
                         <li class="search">
-                            <form>
-                                <input type="search" name="search" placeholder="Поиск по сайту">
+                            <form method="get" action="https://echo.htmlacademy.ru">
+                                <input type="search" name="search" placeholder="Поиск по сайту" autocomplete="off">
+                                <button class="button-search">
+                                    Найти
+                                </button>
                             </form>    
                         </li>
-                        <li class="login-link">
+                        <li class="login-link login-link-header">
                             <a href="#">
                                 Войти
                             </a>    
                         </li>
                     </ul>
                     <ul class="buy">
-                        <li class="compare">
+                        <li class="compare compare-header">
                             <a href="#">
                                 Сравнить
                             </a>    
                         </li>
-                        <li class="basket">
+                        <li class="basket basket-header">
                             <a href="#">
                                 Корзина
                             </a>    
@@ -375,7 +378,7 @@
         <footer class="main-footer main-footer-catalog">
             <div class="wrapper">
                 <div class="footer-logo-address">
-                    <a class="main-logo main-footer-logo">
+                    <a class="main-logo main-footer-logo" href="index.html">
                         Device
                     </a>
                     <p>
@@ -430,20 +433,20 @@
                         </ul>
                     </div>    
                     <div class="user-link">
-                        <ul class="user-navigation">
-                            <li class="login-link">
+                        <ul class="user-navigation user-navigation-footer">
+                            <li class="login-link login-link-footer">
                                 <a href="#">
                                     Войти
                                 </a>
                             </li>
                         </ul>
-                        <ul class="buy">    
-                            <li class="compare">
+                        <ul class="buy buy-footer">    
+                            <li class="compare compare-footer">
                                 <a href="#">
                                     Сравнить
                                 </a>
                             </li>
-                            <li class="basket">
+                            <li class="basket basket-footer">
                                 <a href="#">
                                     Корзина
                                 </a>
