Add filters for catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -135,17 +135,29 @@
                         Фильтр:
                     </h2>
                     <form class="filter" method="get" action="https://echo.htmlacademy.ru">
-                        <fieldset>
+                        <fieldset class="filter-cost">
                             <legend>
                                 Стоимость
                             </legend>
-                            <ul>
-                                <li class="filter-option">
-                                    <input class="visually-hidden filter-input filter-input-range" type="range" name="value-count" min="0" max="10000" step="1">
-                                </li>
-                            </ul>
+                            <div class="range-filter">
+                                <div class="range-controls">
+                                    <div class="scale">
+                                        <div class="bar"></div>
+                                    </div>
+                                    <div class="toggle toggle-min"></div>
+                                    <div class="toggle toggle-max"></div>
+                                </div>
+                                <div class="price-controls">
+                                    <label class="min-price">
+                                        от <input name="min-price" type="text" value="0">
+                                    </label>
+                                    <label class="max-price">
+                                        до <input name="max-price" type="text" value="5000">
+                                    </label>
+                                </div>
+                            </div>                                        
                         </fieldset>
-                        <fieldset>
+                        <fieldset class="filter-colors">
                             <legend>
                                 Цвет
                             </legend>
@@ -175,14 +187,14 @@
                                     </label>
                                 </li>
                                 <li class="filter-option">
-                                    <input class="visually-hidden filter-input filter-input checkbox" type="checkbox" name="Pink" id="filter-pink">
+                                    <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Pink" id="filter-pink">
                                     <label for="filter-pink">
                                         Розовый
                                     </label>
                                 </li>
                             </ul>
                         </fieldset>
-                        <fieldset>
+                        <fieldset class="filter-bluetooth">
                             <legend>
                                 Bluetooth
                             </legend>
