--- a/index.html
+++ b/index.html
@@ -117,11 +117,19 @@
                         <h2 class="visually-hidden">
                             Лучший товар
                         </h2>
-                        <div class="container-best-slider">
+                        <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+                        <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+                        <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+                        <div class="slider-controls">
+                            <label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
+                            <label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
+                            <label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
+                        </div>
+                        <div class="container-best-slider container-best-slider-selfie">
                             <a class="selfie-stick-slide">
                                 <img src="img/selfie-branch.png" width="384" height="486" alt="Селфи-палка">
                             </a>
-                            <div class="best-slider-description">
+                            <div class="best-slider-description slider-selfie-stick">
                                 <b class="caption-slider">
                                     Делай селфи,<br>
                                     как Бен Стиллер!
@@ -421,6 +429,24 @@
                             <p>
                                 Мы с удовольствием доставим ваш товар прямо к вашему подъезду
                                 совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+                            </p>
+                        </div>
+                        <div class="text text-warranty">
+                            <h3>
+                                Гарантия
+                            </h3>
+                            <p>
+                                Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте,
+                                мы выдадим вам новый. Товар, не дом, конечно же.
+                            </p>
+                        </div>
+                        <div class="text text-credit">
+                            <h3>
+                                Кредит
+                            </h3>
+                            <p>
+                                Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита.
+                                Выгодные для нашего банка, разумеется.
                             </p>
                         </div>
                     </section>
