--- a/catalog.html
+++ b/catalog.html
@@ -104,29 +104,31 @@
                     </ul>
                 </nav>
             </header>
+        </div>    
 
             <main class="container container-catalog">
-                <h1 class="page-title">
-                    Моноподы для селфи
-                </h1>  
-                <ul class="breadcrumbs">
-                    <li>
-                        <a href="index.html">
-                            Главная
-                        </a>
-                    </li>
-                    <li>
-                        <a href="catalog.html">
-                            Каталог товаров
-                        </a>
-                    </li>
-                    <li>
-                        <a href="breadcrumbs-current.html">
-                            Моноподы для селфи
-                        </a>
-                    </li>
-                </ul>  
-        </div>      
+                <div class="wrapper">
+                    <h1 class="page-title">
+                        Моноподы для селфи
+                    </h1>  
+                    <ul class="breadcrumbs">
+                        <li>
+                            <a href="index.html">
+                                Главная
+                            </a>
+                        </li>
+                        <li>
+                            <a href="catalog.html">
+                                Каталог товаров
+                            </a>
+                        </li>
+                        <li>
+                            <a href="breadcrumbs-current.html">
+                                Моноподы для селфи
+                            </a>
+                        </li>
+                    </ul>  
+                </div>      
 
             <div class="container-catalog-filter">    
 
@@ -213,7 +215,7 @@
                                 </li>
                             </ul>
                         </fieldset>
-                        <button class="button button-show" type="sumbit">
+                        <button class="button button-show" type="submit">
                             Показать
                         </button>
                     </form>                
@@ -385,7 +387,7 @@
             </div>    
                 
             </main>
-        </div>    
+            
 
         <footer class="main-footer main-footer-catalog">
             <div class="wrapper">
