--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <body>
         <div class="wrapper">
             <header class="main-header">
-                <nav class="main-navigation">
-                    <a class="main-logo main-header-logo">
-                        Device
-                    </a>
+                <a class="main-logo main-header-logo">
+                    Device
+                </a>
+                <nav class="main-navigation main-navigation-index">
                     <ul class="header-page-navigation">
                         <li>
                             <a class="catalog-button" href="catalog.html">
@@ -75,7 +75,7 @@
                             </a>
                         </li>
                     </ul>                    
-                    <ul class="user-navigation">
+                    <ul class="user-navigation user-navigation-index">
                         <li class="search">
                             <form method="get" action="https://echo.htmlacademy.ru">
                                 <input type="search" name="search" placeholder="Поиск по сайту" autocomplete="off">
@@ -88,7 +88,7 @@
                             <a href="#">
                                 Войти
                             </a>
-                        </li>
+                        </li>                        
                     </ul>
                     <ul class="buy">
                         <li class="compare compare-header">
