Worked on pixelperfect and create color logos for IE11

--- a/catalog.html
+++ b/catalog.html
@@ -76,7 +76,7 @@
                         </li>
                     </ul>
                     <ul class="user-navigation">
-                        <li class="search">
+                        <li class="search search-catalog">
                             <form method="get" action="https://echo.htmlacademy.ru">
                                 <input type="search" name="search" placeholder="Поиск по сайту" autocomplete="off">
                                 <button class="button-search">
@@ -115,9 +115,9 @@
             </header>
         </div>  
 
-        <main class="container container-catalog"></main>
+        <main class="container container-catalog">
             <div class="container-wrapper">
-                <div class="wrapper">
+                <div class="wrapper wrapper-title">
                     <h1 class="page-title">
                         Моноподы для селфи
                     </h1>  
@@ -366,7 +366,7 @@
                             </li> 
                             <li class="list-items">
                                 <ul class="pagination-item-list">
-                                    <li class="pagination-item">
+                                    <li class="pagination-item pagination-item-current">
                                         <a href="#">
                                             1
                                         </a>
