--- a/index.html
+++ b/index.html
@@ -454,18 +454,30 @@
 
             <div class="wrapper">
                 <div class="logo-companies">
-                    <a class="logo-item" href="#">
-                        <img src="img/logo-dji-color.png" width="260" height="100" alt="Логотип DJI">
-                    </a>    
-                    <a class="logo-item" href="#">
-                        <img src="img/logo-sp-color.png" width="260" height="100" alt="Логотип SPGadgets">
-                    </a>
-                    <a class="logo-item" href="#">    
-                        <img src="img/gopro-color.png" width="260" height="100" alt="Логотип GoPro">
-                    </a>    
-                    <a class="logo-item" href="#">
-                        <img src="img/logo-vive-color.png" width="260" height="100" alt="Логотип VIVE">
-                    </a>    
+                    <div class="logo-item logo-item-dji">
+                        <a href="#">
+                            <img src="img/logo-dji.png" width="260" height="100" alt="Логотип DJI">
+                            <img class="logo-hidden logo-hidden-dji" src="img/logo-dji-color.png" width="260" height="100" alt="Логотип DJI">
+                        </a>   
+                    </div>
+                    <div class="logo-item logo-item-sp">
+                        <a href="#">
+                            <img src="img/logo-sp.png" width="260" height="100" alt="Логотип SPGadgets">
+                            <img class="logo-hidden logo-hidden-sp" src="img/logo-sp-color.png" width="260" height="100" alt="Логотип SPGadgets">
+                        </a>
+                    </div>
+                    <div class="logo-item logo-item-gopro">
+                        <a href="#">    
+                            <img src="img/gopro.png" width="260" height="100" alt="Логотип GoPro">
+                            <img class="logo-hidden logo-hidden-gopro" src="img/gopro-color.png" width="260" height="100" alt="Логотип GoPro">
+                        </a>   
+                    </div>
+                    <div class="logo-item logo-item-vive"> 
+                        <a href="#">
+                            <img src="img/vive.png" width="260" height="100" alt="Логотип VIVE">
+                            <img class="logo-hidden logo-hidden-vive" src="img/logo-vive-color.png" width="260" height="100" alt="Логотип VIVE">
+                        </a>    
+                    </div>
                 </div>
 
                 <div class="contacts-wrapper">
