Changed header for index-page

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                     Device
                 </a>
                 <nav class="main-navigation main-navigation-index">
-                    <ul class="header-page-navigation">
+                    <ul class="navigation-catalog">
                         <li>
-                            <a class="catalog-button" href="catalog.html">
+                            <a class="catalog-button" href="#">
                                 Каталог товаров
                             </a>
                             <div class="subcatalog">
@@ -60,26 +60,30 @@
                             </div>
                         </li>
                         <li>
-                            <a href="delivery.html">
+                            <a href="#">
                                 Доставка
                             </a>
                         </li>
+                    </ul>
+                    <ul class="feedback-warranty">  
                         <li>
-                            <a href="warranty.html">
+                            <a href="#">
                                 Гарантия
                             </a>
                         </li>
                         <li>
-                            <a href="contacts.html">
+                            <a href="#">
                                 Контакты
                             </a>
                         </li>
-                    </ul>                    
+                    </ul> 
+                </nav>   
+                <div class="wrapper-navigation-header">                    
                     <ul class="user-navigation user-navigation-index">
                         <li class="search">
                             <form method="get" action="https://echo.htmlacademy.ru">
                                 <input type="search" name="search" placeholder="Поиск по сайту" autocomplete="off">
-                                <button class="button-search">
+                                <button class="button-search" type="submit">
                                     Найти
                                 </button>
                             </form>    
@@ -101,8 +105,8 @@
                                 Корзина
                             </a>
                         </li>
-                    </ul>
-                </nav>
+                    </ul>         
+                </div>           
             </header>
         
         </div>
