--- a/catalog.html
+++ b/catalog.html
@@ -79,7 +79,7 @@
                         <li class="search search-catalog">
                             <form method="get" action="https://echo.htmlacademy.ru">
                                 <input type="search" name="search" placeholder="Поиск по сайту" autocomplete="off">
-                                <button class="button-search">
+                                <button class="button-search" type="submit">
                                     Найти
                                 </button>
                             </form>    
