Changed catalog page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <nav class="main-navigation main-navigation-index">
                     <ul class="navigation-catalog">
                         <li>
-                            <a class="catalog-button" href="#">
+                            <a class="catalog-button" href="catalog.html">
                                 Каталог товаров
                             </a>
                             <div class="subcatalog">
