--- a/catalog.html
+++ b/catalog.html
@@ -11,11 +11,11 @@
     <body>
         <div class="wrapper">
             <header class="main-header">
-                <nav class="main-navigation main-navigation-catalog">
-                    <a class="main-logo main-header-logo" href="index.html">
-                        Device
-                    </a>
-                    <ul class="header-page-navigation">
+                <a class="main-logo main-header-logo" href="index.html">
+                    Device
+                </a>
+                <nav class="main-navigation main-navigation-index">
+                    <ul class="navigation-catalog">
                         <li>
                             <a class="catalog-button" href="catalog.html">
                                 Каталог товаров
@@ -60,23 +60,27 @@
                             </div>
                         </li>
                         <li>
-                            <a href="delivery.html">
+                            <a href="#">
                                 Доставка
                             </a>
                         </li>
+                    </ul>
+                    <ul class="feedback-warranty">  
                         <li>
-                            <a href="warranty.html">
+                            <a href="#">
                                 Гарантия
                             </a>
                         </li>
                         <li>
-                            <a href="contacts.html">
+                            <a href="#">
                                 Контакты
                             </a>
                         </li>
-                    </ul>
-                    <ul class="user-navigation">
-                        <li class="search search-catalog">
+                    </ul> 
+                </nav>   
+                <div class="wrapper-navigation-header">                    
+                    <ul class="user-navigation user-navigation-index user-navigation-catalog">
+                        <li class="search">
                             <form method="get" action="https://echo.htmlacademy.ru">
                                 <input type="search" name="search" placeholder="Поиск по сайту" autocomplete="off">
                                 <button class="button-search" type="submit">
@@ -84,12 +88,10 @@
                                 </button>
                             </form>    
                         </li>
-                        <li class="authorization-user">
-                            <ul>
-                                <li class="name-user">
-                                    <a href="#">
-                                        Валентин Петухов
-                                    </a>
+                        <li class="login-link login-link-header">
+                            <ul class="authorization-user">
+                                <li class="footer-name-user">
+                                    Валентин Петухов
                                 </li>
                                 <li class="login-out">
                                     <a href="#">
@@ -97,21 +99,21 @@
                                     </a>
                                 </li>
                             </ul>
-                        </li>
+                        </li>                        
                     </ul>
-                    <ul class="buy">
+                    <ul class="buy buy-catalog">
                         <li class="compare compare-header">
                             <a href="#">
                                 Сравнить
-                            </a>    
+                            </a>
                         </li>
                         <li class="basket basket-header">
                             <a href="#">
                                 Корзина
-                            </a>    
+                            </a>
                         </li>
-                    </ul>
-                </nav>
+                    </ul>         
+                </div>           
             </header>
         </div>  
 
@@ -235,7 +237,7 @@
                                 <h2>
                                     Сортировка:
                                 </h2>
-                            <ul>
+                            <ul class="sort-pagination">
                                 <li class="sort-item">
                                     <a href="#">
                                         По цене
@@ -397,7 +399,7 @@
         <footer class="main-footer">
             <div class="wrapper-footer wrapper-footer-catalog">
                 <div class="footer-logo-address">
-                    <a class="main-logo main-footer-logo">
+                    <a class="main-logo main-footer-logo" href="index.html">
                         Device
                     </a>
                     <ul class="user-navigation user-navigation-footer user-navigation-catalog">
