Fixed pixelperfect bugs

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div class="wrapper">
+        <div class="wrapper wrapper-header-catalog">
             <header class="main-header">
                 <a class="main-logo main-header-logo" href="index.html">
                     Device
