--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         
         </div>
             
-        <main class="container">
+        <main>
             <div class="wrapper">
                 <h1 class="visually-hidden">
                     Интернет магазин дизайнерских гаджетов «Device»
