--- a/catalog.html
+++ b/catalog.html
@@ -90,8 +90,10 @@
                         </li>
                         <li class="login-link login-link-header">
                             <ul class="authorization-user">
-                                <li class="footer-name-user">
-                                    Валентин Петухов
+                                <li class="name-user">
+                                    <a href="#">
+                                        Валентин Петухов
+                                    </a>
                                 </li>
                                 <li class="login-out">
                                     <a href="#">
@@ -406,7 +408,9 @@
                         <li class="login-link login-link-footer">
                             <ul class="authorization-user-footer">
                                 <li class="footer-name-user">
-                                    Валентин Петухов
+                                    <a href="#">
+                                        Валентин Петухов
+                                    </a>
                                 </li>
                                 <li class="login-out">
                                     <a href="#">
@@ -463,6 +467,9 @@
                     <ul class="footer-social">
                         <li>
                             <a class="social-button facebook" href="https://www.facebook.com/htmlacademy">
+                                <span class="visually-hidden">
+                                    Ссылка на фейсбук HTML Academy
+                                </span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                     <path d="M16 0C7.164 0 0 7.163 0 16s7.164 16 16 16c8.837 0 16-7.164 16-16S24.837 0 16 0zm4.062 9.455h-3.021v3.444h3.021v3.445h-3.021v8.61H14.02v-8.61H11v-3.445h3.021V9.455c0-1.902 1.353-3.445 3.021-3.445h3.021v3.445z"/>
                                 </svg>
@@ -470,6 +477,9 @@
                         </li>
                         <li>
                             <a class="social-button instagram" href="https://www.instagram.com/htmlacademy/">
+                                <span class="visually-hidden">
+                                    Ссылка на инстаграм HTML Academy
+                                </span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                     <g>
                                         <path d="M20.916 16a4.938 4.938 0 1 1-9.877 0c0-.394.051-.773.138-1.14h-.897v6.838h11.396V14.86h-.897c.086.367.137.746.137 1.14z"/>
@@ -481,6 +491,9 @@
                         </li>
                         <li>
                             <a class="social-button twitter" href="https://twitter.com/htmlacademy_ru">
+                                <span class="visually-hidden">
+                                    Ссылка на твиттер HTML Academy
+                                </span>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                     <path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.944 12.809c-.251 6.516-3.463 10.832-10.992 10.702h-.486c-.447 0-4.543-.443-5.344-1.823 2.479.19 4.247-.406 5.12-1.136-1.048-.289-2.923-.461-3.251-2.848.384.104.618.221 1.299.113-1.307-.824-2.758-1.519-2.679-3.643.311.317 1.164.518 1.46.457-.768-.233-2.149-3.244-.974-4.781 1.984 1.79 4.075 3.482 7.804 3.643.227-2.214 1.24-3.699 3.168-4.325 1.84-.479 3.255.26 3.901 1.138.737-.224 1.453-.466 2.193-.685-.004.833-.569 1.463-.935 1.709.747.165 1.423-.475 1.423-.475-.184.963-1.094 1.725-1.707 1.954z"/>
                                 </svg>
