Added new logo for catalog items in catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -341,6 +341,9 @@
                                 </a>
                             </li>
                             <li class="catalog-item">
+                                <p class="new-model">
+                                    New
+                                </p>
                                 <div class="mask-of-item">
                                     <a class="button button-basket" href="#">
                                         В корзину
