Add style for input:disabled

--- a/catalog.html
+++ b/catalog.html
@@ -202,7 +202,7 @@
                                         </label>
                                     </li>
                                     <li class="filter-option">
-                                        <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Pink" id="filter-pink">
+                                        <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Pink" id="filter-pink" disabled>
                                         <label for="filter-pink">
                                             Розовый
                                         </label>
