Complete basis norm for test

--- a/catalog.html
+++ b/catalog.html
@@ -5,8 +5,8 @@
         <title>
             «Device» Каталог
         </title>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/style.min.css">
     </head>
     <body>
         <div class="wrapper wrapper-header-catalog">
@@ -202,7 +202,7 @@
                                         </label>
                                     </li>
                                     <li class="filter-option">
-                                        <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Pink" id="filter-pink" disabled>
+                                        <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Pink" id="filter-pink">
                                         <label for="filter-pink">
                                             Розовый
                                         </label>
