--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>
             HTML Academy: Девайс
         </title>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/style.min.css">
     </head>
     <body>
         <div class="wrapper">
@@ -699,7 +699,7 @@
                 </div>                 
             </div>
         </footer>
-        <script src="js/index.js">
+        <script src="js/scripts.min.js">
         </script>
     </body>
 </html>
