--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         </div>    
                     </div>
                     <div class="container-best-slider container-best-slider-bracelet">
-                        <a class="fitness-bracellet-slide">
+                        <a class="fitness-bracelet-slide">
                             <img src="img/fitness-bracelet-slider.png" width="345" height="485" alt="Фитнес-браслет, который напоминает о тренировках">
                         </a>
                         <div class="best-slider-description best-slider-description-bracelet">
