--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         </a>
                         <div class="best-slider-description best-slider-description-quadrupter">
                             <b class="caption-slider">
-                                Порхает как бабочка,<br>
+                                Порхает как бабочка,
                                 жалит как пчела!
                             </b>
                             <p>
