changed phone number style for Edge and Changed selector of circle "new-model" in catalog-item
also added description of sort-arrow in catalog page

--- a/catalog.html
+++ b/catalog.html
@@ -259,6 +259,9 @@
                             <ul class="sort-arrow">
                                 <li class="sort-arrow-top">
                                     <a href="#">
+                                        <span class="visually-hidden">
+                                            Сортировка по уменьшению цены
+                                        </span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                                             <path fill="#231F20" d="M5.5 0L0 10h11z"/>
                                         </svg>
@@ -266,6 +269,9 @@
                                 </li>
                                 <li class="sort-arrow-down">
                                     <a href="#">
+                                        <span class="visually-hidden">
+                                            Сортировка по увеличению цены
+                                        </span>
                                         <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
                                             <path fill="#231F20" d="M5.5 10L0 0h11"/>
                                         </svg>
@@ -340,10 +346,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="catalog-item">
-                                <p class="new-model">
-                                    New
-                                </p>
+                            <li class="catalog-item">                               
                                 <div class="mask-of-item">
                                     <a class="button button-basket" href="#">
                                         В корзину
@@ -458,9 +461,9 @@
                         </ul>                        
                     </nav>    
                     <div class="wrapper-phone-logo">
-                        <p class="phone">
+                        <a class="phone" href="tel:+74954959595">
                             Тел. +7 (495) 495-95-95
-                        </p>
+                        </a>
                     </div>
                 </div>
                 <div class="wrapper-bottom">
