--- a/index.html
+++ b/index.html
@@ -644,9 +644,9 @@
                         </ul>                        
                     </nav>    
                     <div class="wrapper-phone-logo">
-                        <p class="phone">
+                        <a class="phone" href="tel: +74954959595">
                             Тел. +7 (495) 495-95-95
-                        </p>
+                        </a>
                     </div>
                 </div>
                 <div class="wrapper-bottom">
