Added href for modal windows

--- a/index.html
+++ b/index.html
@@ -543,12 +543,12 @@
                                     </svg>
                                 </button>
                             </div>
-                            <a class="map-button" href="#">
+                            <a class="map-button" href="map-page.html">
                                 <img src="img/map.png" width="560" height="222" alt="Адрес магазина «Device» ул. Строителей, 15">
                             </a>    
                         </section>
 
-                        <a class="button write-to-us big-button" href="#">
+                        <a class="button write-to-us big-button" href="form-page.html">
                             Напишите нам
                         </a>
 
