Changed selector of new-model

--- a/catalog.html
+++ b/catalog.html
@@ -346,7 +346,7 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="catalog-item">                               
+                            <li class="catalog-item new-model">                               
                                 <div class="mask-of-item">
                                     <a class="button button-basket" href="#">
                                         В корзину
